--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ default: &default
 
 development:
   <<: *default
-  database: ctapad_backend_development
+  database: app_backend_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 staging:
   <<: *default
-  database: ctapad_backend_staging
+  database: app_backend_staging
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,4 +81,4 @@ staging:
 #
 production:
   <<: *default
-  database: ctapad_backend_production
+  database: app_backend_production
