--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     image: redis:latest
 
-  ctapad:
+  app:
     depends_on:
       - 'db'
       - 'redis'
@@ -20,7 +20,7 @@ services:
     env_file:
       - '.env'
     volumes:
-      - .:/ctapad-backend
+      - .:/app
       - bundle_path:/bundle
 
   db:
