--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
 RAILS_MASTER_KEY=<paste master key>
 RAILS_ENV=<environment>
 RAKE_ENV=<environment>
+BUNDLE_PATH=./bundle
+BUNDLE_BIN=./bundle
+GEM_HOME=./bundle
