--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ config/master.key
 ## Environment normalization:
 /.bundle
 /vendor/bundle
+/bundle
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
@@ -67,3 +68,5 @@ yarn-debug.log*
 !/storage/.keep
 
 /config/master.key
+
+
